tests/ui/runtime/gc/check_finalizers.stderr
error: `ShouldFail(Cell::new(123))` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:71:13
   |
LL |         self.0.replace(456);
   |         ------
   |         |
   |         caused by the expression in `fn drop(&mut)` here because
   |         it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(ShouldFail(Cell::new(123)));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync + FinalizerSafe`.

error: `gcfields` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:74:13
   |
LL |         println!("Boom {}", self.0);
   |                             ------
   |                             |
   |                             caused by the expression here in `fn drop(&mut)` because
   |                             it uses another `Gc` type.
...
LL |     Gc::new(gcfields);
   |             ^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` finalizers are unordered, so this field may have already been dropped. It is not safe to dereference.

error: `self_call` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:77:13
   |
LL |         self.foo();
   |         ----------
   |         |
   |         caused by the expression in `fn drop(&mut)` here because
   |         it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(self_call);
   |             ^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync + FinalizerSafe`.

error: `not_threadsafe` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:80:13
   |
LL |         println!("Boom {}", self.0.0);
   |                             --------
   |                             |
   |                             caused by the expression in `fn drop(&mut)` here because
   |                             it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(not_threadsafe);
   |             ^^^^^^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync + FinalizerSafe`.

error: aborting due to 4 previous errors

